reset 增加input button a｜增加img.js｜樣式引入fontawsome｜新增header footer 含RWD

--- a/src/layout/footer.html
+++ b/src/layout/footer.html
@@ -1,1 +1,58 @@
-<p>this is footer...</p>
+<div class="container-footer">
+    <p class="gotop">
+        <a id="button"><img src="assets/img/goToTop.svg"></a>
+    </p>
+    <div class="footer-menu">
+        <div class="menu-content">
+            <h3>關於幸福企業</h3>
+            <p class="p2"><a href="https://www.1111.com.tw/Registered/Index?agent=ettczone_university&amp;ReturnUrl=" target="_blank">加入會員</a></p>
+            <p><a href="https://www.1111.com.tw/Login/Index?ReturnUrl=" target="_blank">會員登入</a></p>
+            <p><a href="https://recruit.1111.com.tw/login.aspx?ref=%2fdefault.aspx" target="_blank">徵才刊登</a></p>
+            <p><a href="https://www.facebook.com/happinessjobs/" target="_blank">FB粉絲團</a></p>
+            <p><a href="https://www.1111.com.tw/help/memberRead.asp" target="_blank">隱私權保護</a></p>
+        </div>
+        <div class="menu-content">
+            <h3>幸福企業投票</h3>
+            <p><a href="#directions">活動說明</a></p>
+            <p><a href="https://happiness.1111.com.tw/2022event/vote/2022_winnerList_gold.asp" target="_blank">2022得獎名單</a></p>
+            <p><a href="https://event.1111.com.tw/event21/happiness_vote/winnerList_gold.asp" target="_blank">2021得獎名單</a></p>
+            <p><a href="https://event.1111.com.tw/event21/happiness_vote/winnerList_award_2019.asp" target="_blank">2019得獎名單</a></p>
+        </div>
+        <div class="menu-content">
+            <h3>優質員工福利</h3>
+            <p><a href="https://happiness.1111.com.tw/search-jobs.asp?verify=False&amp;fs=1003&amp;bf=1501,1707,1500&amp;jw=6" target="_blank">包吃包住</a></p>
+            <p><a href="https://happiness.1111.com.tw/search-jobs.asp?bf=1106&amp;jw=5" target="_blank">三節獎金</a></p>
+            <p><a href="https://happiness.1111.com.tw/search-jobs.asp?fs=1001&amp;bf=1803,1804,1912&amp;jw=9" target="_blank">旅遊一把罩</a></p>
+            <p><a href="https://happiness.1111.com.tw/search-jobs.asp?fs=1005&amp;bf=1105&amp;jw=8" target="_blank">年終獎金</a></p>
+        </div>
+        <div class="menu-content">
+            <h3>其他服務</h3>
+            <p><a href="https://www.jobsalary.com.tw/" target="_blank">薪資公秤</a></p>
+            <p><a href="https://marketing.1111.com.tw/" target="_blank">行銷大平台</a></p>
+            <p><a href="https://www.1111.com.tw/1000w/fanshome/discuss.asp?cat=fans" target="_blank">面試經驗談</a></p>
+        </div>
+    </div>
+    <hr>
+    <div class="text-center">
+        <div class="footer-logo">
+            <img src="assets/img/footer_logo.png">
+        </div>
+        <p class="footer-share">
+            <a href="#"><img src="assets/img/footer_fb.png"></a>
+            <a href="#"><img src="assets/img/footer_line.png"></a>
+            <a href="#"><img src="assets/img/footer_twitter.png"></a>
+        </p>
+    </div>
+    <div class="footer-subscribe">
+        <input type="text" class="subscribeTerm" placeholder="E-mail">
+        <button type="submit" class="subscribeButton">
+            <p class="btn">訂閱電子報</p>
+        </button>
+    </div>
+</div>
+
+<div class="footer-copy">
+    <p class="tag">© 1111人力銀行2023幸福企業 All Rights Reserved.</p>
+    <a href="" class="tag">隱私權宣告</a>
+    <a href="" class="tag">使用條款</a>
+</div>
