--- a/src/layout/header.html
+++ b/src/layout/header.html
@@ -1,9 +1,110 @@
-<h1><a href="#"><img src="storage/images/Group.png" alt="logo"></a></h1>
 <nav>
-    <ul>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
+    <h1 class="nav-brand">
+        <a href="#">
+            <img src="assets/img/1111_logo.svg" alt="1111幸福企業">
+        </a>
+    </h1>
+    <ul class="main-menu">
+        <li>
+            <a href="#" class="p2">年度盛事 <span><i class="fa-solid fa-angle-down"></i></span> </a> 
+            <ul class="dropdown-menu">
+                <li><a href="#">品牌報名</a></li>
+                <li><a href="#">網友推薦</a></li>
+                <li><a href="#">品牌票選</a></li>
+                <li><a href="#">票選抽獎</a></li>
+                <li><a href="#">2023得獎名單</a></li>
+                <li><a href="#">2022得獎名單</a></li>
+                <li><a href="#">2021得獎名單</a></li>
+                <li><a href="#">2019得獎名單</a></li>
+            </ul>
+        </li>
+    
+        <li>
+            <a href="#" class="p2">幸福職涯 <span><i class="fa-solid fa-angle-down"></i></span></a> 
+            <ul class="dropdown-menu">
+                <li><a href="#">嚴選企業</a> </li>
+                <li><a href="#">推薦職缺</a> </li>
+            </ul>
+        </li>
+    
+        <li>
+            <a href="#" class="p2">精選NEWS <span><i class="fa-solid fa-angle-down"></i></span></a> 
+            <ul class="dropdown-menu">
+                <li><a href="#">企業報導</a> </li>
+                <li><a href="#">企業特刊</a> </li>
+            </ul>
+        </li>
+    
+        <li><a href="#" class="p2">人才永續</a> </li>
+    </ul>
+
+    <ul class="login main-menu">
+        <li class="search-wrap">
+            <div class="search">
+                <button type="submit" class="searchButton">
+                    <i class="fa fa-search"></i>
+                </button>
+                <input type="text" class="searchTerm" placeholder="企業&middot;工作&middot;報導">
+            </div>
+        </li>
+        <li><a href=""><i class="fa-solid fa-circle-user"></i> 登入 / 註冊 </a></li>
     </ul>
 </nav>
-<div class="imgtest"></div>
+<div id="nav-container" class="mobile-menu">
+
+    <div class="bg"></div>
+    <div class="button" tabindex="0">
+  
+      <span class="icon-bar"></span>
+  
+      <span class="icon-bar"></span>
+  
+      <span class="icon-bar"></span>
+  
+    </div>
+    <div id="nav-content" tabindex="0">
+        <ul class="mobile-main-menu">
+            <li>
+                <a href="#">年度盛事&ensp;<span><i class="fa-solid fa-angle-down"></i></span></a>
+                <ul>
+                    <li><a href="#">&emsp;網友推薦</a> </li>
+                    <li><a href="#">&emsp;品牌票選</a> </li>
+                    <li><a href="#">&emsp;票選抽獎</a> </li>
+                    <li><a href="#">&emsp;2023得獎名單</a> </li>
+                    <li><a href="#">&emsp;2022得獎名單</a> </li>
+                    <li><a href="#">&emsp;2021得獎名單</a> </li>
+                    <li><a href="#">&emsp;2019得獎名單</a> </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">幸福職涯&ensp;<span><i class="fa-solid fa-angle-down"></i></span></a>
+                <ul>
+                    <li><a href="#">&emsp;嚴選企業</a> </li>
+                    <li><a href="#">&emsp;推薦職缺</a> </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">精選NEWS&ensp;<span><i class="fa-solid fa-angle-down"></i></span></a>
+                <ul>
+                    <li><a href="#">&emsp;企業報導</a> </li>
+                    <li><a href="#">&emsp;企業特刊</a> </li>
+                </ul>
+            </li>
+            <li><a href="#">人才永續</a></li>
+            <li class="search-wrap">
+                <div class="search">
+                    <button type="submit" class="searchButton">
+                        <i class="fa fa-search"></i>
+                    </button>
+                    <input type="text" class="searchTerm" placeholder="企業&middot;工作&middot;報導">
+                </div>
+                <div class="login">
+                    <a href="">
+                        <i class="fa-solid fa-circle-user"></i> 
+                        <p class="p2">登入 / 註冊</p> 
+                    </a>
+                </div>
+            </li>
+        </ul>
+    </div>
+</div>
