--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -15,6 +15,7 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
+input, button,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
@@ -22,6 +23,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	text-decoration:none;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
