--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -69,3 +69,9 @@
     transition: $attr $s;
     @content;
 }
+
+@mixin mentor-img($maxw){
+    width: 100%;
+    object-fit: cover;
+    max-width: $maxw;
+}
