--- a/src/layout/swiper.html
+++ b/src/layout/swiper.html
@@ -1,1 +1,11 @@
-<p>32432342 <br> 32424524243</p>
+<div class="swiper mySwiper">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide"><img src="assets/img/swiper-img.png" alt=""></div>
+        <div class="swiper-slide"><img src="assets/img/swiper-img.png" alt=""></div>
+        <div class="swiper-slide"><img src="assets/img/swiper-img.png" alt=""></div>
+        <div class="swiper-slide"><img src="assets/img/swiper-img.png" alt=""></div>
+    </div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-pagination"></div>
+</div>
