--- a/pro/assets/css/main77080b22e6e0aa942069.css
+++ b/pro/assets/css/main77080b22e6e0aa942069.css
@@ -80,11 +80,11 @@ nav .nav-brand, header {
   display: block;
 }
 
-.job-tag > p, nav .nav-brand img {
+.job-tag > p, .archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .media-share .media-item a, .archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .category ul li a, nav .nav-brand img {
   display: inline-block;
 }
 
-.mobile-main-menu a, nav .main-menu li:hover > ul, nav .main-menu .dropdown-menu, nav .main-menu li:hover > a, nav .main-menu li:hover, nav .main-menu li a, nav .main-menu li, nav .main-menu a, nav .main-menu, nav .nav-brand img, nav .nav-brand, nav, header {
+.archive-coverage-wrapper .archive-coverage-container .pgnb-style2 .g-pagination select, .archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .media-share .media-item a, .mobile-main-menu a, nav .main-menu li:hover > ul, nav .main-menu .dropdown-menu, nav .main-menu li:hover > a, nav .main-menu li:hover, nav .main-menu li a, nav .main-menu li, nav .main-menu a, nav .main-menu, nav .nav-brand img, nav .nav-brand, nav, header {
   box-sizing: border-box;
 }
 
@@ -92,7 +92,7 @@ nav .nav-brand, header {
   text-align: center;
 }
 
-.job-tag > p {
+.job-tag > p, .archive-coverage-wrapper .archive-coverage-container .pgnb-style2 .g-pagination select, .archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .category ul li {
   cursor: pointer;
 }
 
@@ -110,7 +110,7 @@ footer {
     padding-top: 40px;
   }
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 480px) {
   footer {
     padding-top: 20px;
   }
@@ -752,8 +752,8 @@ card-job {
   background: #F7F1E7;
 }
 .archive-coverage-wrapper .archive-coverage-container {
-  padding: 4rem 2rem;
-  margin: 80px auto;
+  padding: 9rem 2rem 4rem;
+  margin: 0 auto;
   max-width: 1420px;
 }
 .archive-coverage-wrapper .archive-coverage-container .search-bar {
@@ -764,28 +764,255 @@ card-job {
   align-content: unset;
   align-items: center;
   gap: 20px;
+  margin-bottom: 1.5rem;
 }
 .archive-coverage-wrapper .archive-coverage-container .search-bar input {
   color: #505050;
   padding: 0.5rem 1rem;
   border-radius: 8px;
+  height: 47px;
+  flex-basis: 30%;
 }
 .archive-coverage-wrapper .archive-coverage-container .search-bar input::-moz-placeholder {
   color: #505050;
+  letter-spacing: 1px;
 }
 .archive-coverage-wrapper .archive-coverage-container .search-bar input:-ms-input-placeholder {
   color: #505050;
+  letter-spacing: 1px;
 }
 .archive-coverage-wrapper .archive-coverage-container .search-bar input::placeholder {
   color: #505050;
+  letter-spacing: 1px;
+}
+.archive-coverage-wrapper .archive-coverage-container .search-bar button {
+  flex-basis: 10%;
+  height: 47px;
+  border-radius: 8px;
 }
 .archive-coverage-wrapper .archive-coverage-container .archive {
-  -moz-text-align-last: left;
-       text-align-last: left;
+  text-align: left;
+}
+.archive-coverage-wrapper .archive-coverage-container .archive p,
+.archive-coverage-wrapper .archive-coverage-container .archive h4 {
+  margin-bottom: 15px;
 }
 .archive-coverage-wrapper .archive-coverage-container .archive p.total {
   color: #000000;
 }
+.archive-coverage-wrapper .archive-coverage-container .archive .archive-item {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: unset;
+  justify-content: unset;
+  align-content: unset;
+  align-items: center;
+  background: white;
+  padding: 1.5rem;
+  margin-bottom: 1rem;
+  gap: 20px;
+}
+.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-cover {
+  flex: 0.7;
+}
+.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-cover img {
+  width: 100%;
+  aspect-ratio: 4/3;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content {
+  flex: 1;
+  padding: 2rem 1rem;
+}
+.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content p.date {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: unset;
+  justify-content: unset;
+  align-content: unset;
+  align-items: center;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+  color: #C15E0B;
+}
+.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content p.date svg {
+  width: 100%;
+  max-width: 30px;
+}
+.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: unset;
+  justify-content: space-between;
+  align-content: unset;
+  align-items: center;
+  gap: 15px;
+}
+.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .category ul {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: unset;
+  justify-content: unset;
+  align-content: unset;
+  align-items: unset;
+  gap: 10px;
+}
+.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .category ul li a {
+  color: #DD4B4B;
+  padding: 0.5rem 1rem;
+  transition: all ease 0.4s;
+  border: 1px solid #d9d9d9;
+  border-radius: 5px;
+}
+.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .category ul li a:hover {
+  color: white;
+  background: #DD4B4B;
+  border-color: #DD4B4B;
+}
+.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .media-share {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: unset;
+  justify-content: unset;
+  align-content: unset;
+  align-items: center;
+  gap: 10px;
+}
+.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .media-share .media-item a {
+  width: 40px;
+  height: 40px;
+  padding: 0.5rem;
+  border: 1px solid #DDDDDD;
+  border-radius: 100px;
+  transition: all ease 0.4s;
+}
+.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .media-share .media-item a:hover {
+  border-color: #DD4B4B;
+}
+.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .media-share .media-item a:hover svg path {
+  fill: #DD4B4B;
+}
+.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .media-share .media-item a svg {
+  width: 100%;
+  height: 100%;
+}
+.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .media-share .media-item a svg path {
+  transition: all ease 0.4s;
+}
+@media screen and (max-width: 1024px) {
+  .archive-coverage-wrapper .archive-coverage-container .archive .archive-item {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: unset;
+    justify-content: unset;
+    align-content: unset;
+    align-items: unset;
+  }
+  .archive-coverage-wrapper .archive-coverage-container .archive .archive-item .post-cover,
+.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .post-content {
+    flex: 1 !important;
+    flex-basis: 100% !important;
+  }
+}
+.archive-coverage-wrapper .archive-coverage-container .pgnb-style2 {
+  margin: 2rem 0;
+}
+.archive-coverage-wrapper .archive-coverage-container .pgnb-style2 .g-pagination {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: unset;
+  justify-content: center;
+  align-content: unset;
+  align-items: center;
+  gap: 40px;
+}
+.archive-coverage-wrapper .archive-coverage-container .pgnb-style2 .g-pagination select {
+  width: 100%;
+  max-width: 140px;
+  height: 47px;
+  color: #505050;
+  border-radius: 8px;
+  padding: 0.5rem;
+  padding-right: 2rem;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: url(../../assets/img/pgnb-style2-arrow-d.svg);
+  background-repeat: no-repeat;
+  background-size: 58px 20px;
+  background-position: calc(100% + 6px) calc(2em - 16px);
+  border-color: #666;
+}
+.archive-coverage-wrapper .archive-coverage-container .pgnb-style2 .g-pagination a.tag {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: unset;
+  justify-content: unset;
+  align-content: unset;
+  align-items: center;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+  color: #505050;
+  transition: all ease 0.4s;
+}
+.archive-coverage-wrapper .archive-coverage-container .pgnb-style2 .g-pagination a.tag.previous {
+  flex-direction: row-reverse;
+}
+.archive-coverage-wrapper .archive-coverage-container .pgnb-style2 .g-pagination a.tag.previous svg {
+  transform: rotateY(180deg);
+}
+.archive-coverage-wrapper .archive-coverage-container .pgnb-style2 .g-pagination a.tag:hover {
+  color: #DD4B4B;
+}
+.archive-coverage-wrapper .archive-coverage-container .pgnb-style2 .g-pagination a.tag:hover.next svg {
+  transform: translateX(10px);
+}
+.archive-coverage-wrapper .archive-coverage-container .pgnb-style2 .g-pagination a.tag:hover.previous svg {
+  transform: translateX(-10px) rotateY(180deg);
+}
+.archive-coverage-wrapper .archive-coverage-container .pgnb-style2 .g-pagination a.tag span {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: unset;
+  justify-content: unset;
+  align-content: unset;
+  align-items: unset;
+}
+.archive-coverage-wrapper .archive-coverage-container .pgnb-style2 .g-pagination a.tag svg {
+  transition: all ease 0.4s;
+}
+@media screen and (max-width: 480px) {
+  .archive-coverage-wrapper .archive-coverage-container .pgnb-style2 .g-pagination {
+    gap: 15px;
+  }
+  .archive-coverage-wrapper .archive-coverage-container .pgnb-style2 .g-pagination a.tag {
+    -moz-column-gap: 5px;
+         column-gap: 5px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .archive-coverage-wrapper .archive-coverage-container {
+    padding: 9rem 1.5rem 4rem;
+  }
+  .archive-coverage-wrapper .archive-coverage-container .search-bar {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: unset;
+    justify-content: center;
+    align-content: unset;
+    align-items: unset;
+  }
+  .archive-coverage-wrapper .archive-coverage-container .search-bar input {
+    flex-basis: 100%;
+  }
+  .archive-coverage-wrapper .archive-coverage-container .search-bar .btn {
+    flex-basis: 30%;
+  }
+  .archive-coverage-wrapper .archive-coverage-container .archive > div {
+    padding: 0 !important;
+  }
+}
+
 * {
   font-family: "Noto Sans TC", sans-serif, Arial, "Font Awesome 6 Free" !important;
 }
@@ -802,6 +1029,7 @@ h2, .h2 {
   line-height: 110%;
   letter-spacing: 0.01em;
   color: #000000;
+  margin-bottom: 1.5rem;
 }
 @media screen and (max-width: 768px) {
   h2, .h2 {
@@ -864,13 +1092,12 @@ p, .p1 {
 .p2 {
   font-size: 18px;
   font-weight: 300;
-  line-height: 120%;
+  line-height: 1.7;
   letter-spacing: 0.01em;
 }
 @media screen and (max-width: 768px) {
   .p2 {
     font-size: 16px;
-    line-height: 105%;
   }
 }
 
@@ -947,4 +1174,4 @@ input:focus, select:focus {
   outline: none;
 }
 
-/*# sourceMappingURL=main026e0ea58f19bf27bfe9.css.map*/
+/*# sourceMappingURL=main77080b22e6e0aa942069.css.map*/
