--- a/src/layout/footer.html
+++ b/src/layout/footer.html
@@ -43,11 +43,9 @@
             <a href="#"><img src="assets/img/footer_twitter.png"></a>
         </p>
     </div>
-    <div class="footer-subscribe">
-        <input type="text" class="subscribeTerm" placeholder="E-mail">
-        <button type="submit" class="subscribeButton">
-            <p class="btn">訂閱電子報</p>
-        </button>
+    <div class="footer-subscribe classBtn">
+        <input type="email" placeholder="E-mail">
+        <button class="search-submit-btn btn">訂閱電子報</button>
     </div>
 </div>
 
