--- a/pro/assets/css/main.css
+++ b/pro/assets/css/main.css
@@ -65,14 +65,14 @@ table {
   border-spacing: 0;
 }
 
-.archive-coverage-wrapper .archive-coverage-container, .article, card-job, nav {
+.archive-coverage-wrapper .ad-area-wrapper .ad-area-container, .archive-coverage-wrapper .archive-coverage-container, .article, card-job, nav {
   margin: auto;
   padding: 0 30px;
   max-width: 1920px;
   box-sizing: border-box;
 }
 
-nav .nav-brand, header {
+.pgnb-style2, nav .nav-brand, header {
   display: block;
 }
 
@@ -80,7 +80,7 @@ nav .nav-brand, header {
   display: inline-block;
 }
 
-.pgnb-style2 .g-pagination select, .archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .media-share .media-item a, .mobile-main-menu a, nav .main-menu li:hover > ul, nav .main-menu .dropdown-menu, nav .main-menu li:hover > a, nav .main-menu li:hover, nav .main-menu li a, nav .main-menu li, nav .main-menu a, nav .main-menu, nav .nav-brand img, nav .nav-brand, nav, header {
+.classBtn input, .pgnb-style2 .g-pagination select, .archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .media-share .media-item a, .mobile-main-menu a, nav .main-menu li:hover > ul, nav .main-menu .dropdown-menu, nav .main-menu li:hover > a, nav .main-menu li:hover, nav .main-menu li a, nav .main-menu li, nav .main-menu a, nav .main-menu, nav .nav-brand img, nav .nav-brand, nav, header {
   box-sizing: border-box;
 }
 
@@ -88,7 +88,7 @@ nav .nav-brand, header {
   text-align: center;
 }
 
-.pgnb-style2 .g-pagination select, .job-tag > p, .archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .category ul li {
+.pgnb-style2 .g-pagination select, .job-tag > p, .btn, .archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .category ul li {
   cursor: pointer;
 }
 
@@ -193,18 +193,17 @@ footer {
   gap: 20px;
 }
 .container-footer .footer-subscribe {
-  text-align: center;
-  padding-bottom: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 .container-footer .footer-subscribe input {
-  padding: 8px 0px 8px 8px;
-  background-color: white;
-  border-radius: 4px;
+  flex-basis: 50%;
 }
 .container-footer .footer-subscribe button {
-  padding: 8px 36px;
-  background-color: #EF6261;
-  border-radius: 4px;
+  flex-basis: 30%;
 }
 
 .footer-copy {
@@ -718,40 +717,6 @@ card-job {
   margin: 0 auto;
   max-width: 1420px;
 }
-.archive-coverage-wrapper .archive-coverage-container .search-bar {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: unset;
-  justify-content: center;
-  align-content: unset;
-  align-items: center;
-  gap: 20px;
-  margin-bottom: 1.5rem;
-}
-.archive-coverage-wrapper .archive-coverage-container .search-bar input {
-  color: #505050;
-  padding: 0.5rem 1rem;
-  border-radius: 8px;
-  height: 47px;
-  flex-basis: 30%;
-}
-.archive-coverage-wrapper .archive-coverage-container .search-bar input::-moz-placeholder {
-  color: #505050;
-  letter-spacing: 1px;
-}
-.archive-coverage-wrapper .archive-coverage-container .search-bar input:-ms-input-placeholder {
-  color: #505050;
-  letter-spacing: 1px;
-}
-.archive-coverage-wrapper .archive-coverage-container .search-bar input::placeholder {
-  color: #505050;
-  letter-spacing: 1px;
-}
-.archive-coverage-wrapper .archive-coverage-container .search-bar button {
-  flex-basis: 10%;
-  height: 47px;
-  border-radius: 8px;
-}
 .archive-coverage-wrapper .archive-coverage-container .archive {
   text-align: left;
 }
@@ -899,6 +864,33 @@ card-job {
     padding: 0 !important;
   }
 }
+.archive-coverage-wrapper .ad-area-wrapper {
+  background: white;
+  padding: 5rem 0;
+}
+.archive-coverage-wrapper .ad-area-wrapper .ad-area-container {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: unset;
+  justify-content: unset;
+  align-content: unset;
+  align-items: center;
+  gap: 30px;
+  margin: 0 auto;
+  max-width: 1420px;
+}
+.archive-coverage-wrapper .ad-area-wrapper .ad-area-container .block {
+  flex: 1;
+  flex-basis: 100%;
+}
+.archive-coverage-wrapper .ad-area-wrapper .ad-area-container .block img {
+  width: 100%;
+}
+@media screen and (max-width: 480px) {
+  .archive-coverage-wrapper .ad-area-wrapper .ad-area-container {
+    flex-wrap: wrap;
+  }
+}
 
 * {
   font-family: "Noto Sans TC", sans-serif, Arial, "Font Awesome 6 Free" !important;
@@ -1008,6 +1000,7 @@ p, .p1 {
   letter-spacing: 0.01em;
   color: white;
   background: #EF6261;
+  transition: all ease 0.4s;
 }
 @media screen and (max-width: 768px) {
   .btn {
@@ -1136,4 +1129,38 @@ input:focus, select:focus {
   }
 }
 
-/*# sourceMappingURL=main3ca7ae8ea47a2cd21295.css.map*/
+.classBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 1.5rem;
+}
+.classBtn input {
+  flex-basis: 30%;
+  color: #505050;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  height: 47px;
+}
+.classBtn input::-moz-placeholder {
+  color: #505050;
+  letter-spacing: 1px;
+}
+.classBtn input:-ms-input-placeholder {
+  color: #505050;
+  letter-spacing: 1px;
+}
+.classBtn input::placeholder {
+  color: #505050;
+  letter-spacing: 1px;
+}
+.classBtn button {
+  flex-basis: 10%;
+  height: 47px;
+  flex-basis: 10%;
+  border-radius: 8px;
+}
+
+/*# sourceMappingURL=main.css.map*/
