--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -78,19 +78,14 @@ footer{
     }
 
     .footer-subscribe{
-        text-align: center;
-        padding-bottom: 60px;
+        @include ClassicBtn(10px);
+
         input{
-            padding: 8px 0px 8px 8px;
-            background-color: $c-white;
-            border-radius: 4px;
+            @include f-flexBasis(50%);
         }
         button{
-            padding: 8px 36px;
-            background-color: $c-primary;
-            border-radius: 4px;
+            @include f-flexBasis(30%);
         }
-
     }
 
 }
