--- a/src/sass/page/_archive-coverage.scss
+++ b/src/sass/page/_archive-coverage.scss
@@ -8,31 +8,6 @@
         margin: 0 auto;
         max-width: 1420px;
 
-        .search-bar {
-            @include flex($a-i: center, $w: wrap, $j-c: center);
-            gap: 20px;
-            margin-bottom: 1.5rem;
-
-            input {
-                color: $c-gray;
-                padding: 0.5rem 1rem;
-                border-radius: 8px;
-                height: 47px;
-                flex-basis: 30%;
-
-                &::placeholder {
-                    color: $c-gray;
-                    letter-spacing: 1px;
-                }
-            }
-
-            button {
-                flex-basis: 10%;
-                height: 47px;
-                border-radius: 8px;
-            }
-        }
-
         .archive {
             text-align: left;
 
@@ -184,5 +159,31 @@
                 }
             }
         }
+    }
+
+    .ad-area-wrapper{
+        background: $c-white;
+        padding: 5rem 0;
+        
+        .ad-area-container{
+            @extend %page-content;
+            @include flex($a-i:center);
+            gap: 30px;
+            margin: 0 auto;
+            max-width: 1420px;
+            .block{
+                flex:1;
+                flex-basis: 100%;
+    
+                img{
+                    width: 100%;
+                }
+            }
+
+            @include mobile{
+                flex-wrap: wrap;
+            }
+        }
+
     }
 }
