--- a/src/sass/layout/_card-job.scss
+++ b/src/sass/layout/_card-job.scss
@@ -1,16 +1,37 @@
-card-job{
+// card-job{
+//     @extend %page-content;
+//     padding: 0px;
+//     @include basic_grid(4,1fr,20px,20px);
+//     @include pad{
+//         @include basic_grid(2,1fr,20px,20px);
+//     }
+//     // @include mini-pad{
+//     //     @include basic_grid(1,1fr,20px,20px);
+//     // }
+// }
+
+.cardJob-section{
     @extend %page-content;
-    @include basic_grid(4,1fr,40px,40px);
+    padding: 0px;
+    @include basic_grid(4,1fr,20px,20px);
+    @include pad{
+        @include basic_grid(2,1fr,20px,20px);
+    }
+    @include mini-pad{
+        display: none;
+    }
 }
 
 .card-job{
-    min-width: 290px;
-    max-width: 300px;
+    // min-width: 180px;
+    // max-width: 300px;
 
     @include flex($d:column);
 
     >img{
-        @include mentor-img(300px);
+        // @include mentor-img(300px);
+        width: 100%;
+        height: 100%;
     }
 
     .card-content{
@@ -47,10 +68,39 @@ card-job{
 
     .card-office{
         background: $c-primary;
-        padding: 6px 24px;
+        padding: 6px 20px;
+        text-align: center;
         >p{
             color: $c-white;
         }
 
     }
+}
+
+.minipad-swiper{
+    display: none;
+    @include mini-pad{
+        display: block;
+    }
+    .swiper {
+        width: 100%;
+        height: 100%;
+      }
+  
+      .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        display: flex;
+        background-color: transparent;
+        justify-content: center;
+        align-items: center;
+      }
+  
+      .swiper-slide img {
+        padding: 0px;
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
 }
