--- a/src/sass/layout/_swiper.scss
+++ b/src/sass/layout/_swiper.scss
@@ -10,14 +10,57 @@
     text-align: center;
     font-size: 18px;
     background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex($a-i:flex-start,$j-c:center);
+    gap:40px;
+
+    @include pad{
+        @include flex($d:column,$a-i:center,$j-c:center);
+        gap:40px;
+    }
+
+    >.title{
+        @include flex($d:column-reverse,$w:nowrap,$a-i:flex-start);
+        text-align: left;
+        border: unset;
+        padding: 60px 80px 0px 0px;
+        -webkit-writing-mode: vertical-lr;
+        writing-mode: vertical-lr;
+
+        p,h2{
+            letter-spacing: 0.4rem;
+            @include pad{
+                letter-spacing: 0.2rem;
+            }
+        }
+
+        p{
+            @include pad{
+                line-height: 1.5rem;
+            }
+            @include mobile{
+                padding: 0px 20px;
+                letter-spacing: 0rem;
+                line-height: 1.8rem;
+            }
+        }
+
+        @include pad{
+            @include flex($d:column,$w:nowrap,$a-i:center);
+            text-align: center;
+            -webkit-writing-mode: horizontal-tb;
+            writing-mode: horizontal-tb;
+            gap:0px;
+            padding: 0px;
+        }
+    }
 }
 
 .swiper-slide img {
+    padding: 40px 0px;
     display: block;
     width: 100%;
     height: 100%;
+    max-height: 600px;
     object-fit: cover;
+    overflow: hidden;
 }
