--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,8 @@
 @import 'layout/footer';
 @import 'layout/header';
 @import 'layout/card-job';
+@import 'layout/category';
+@import 'layout/swiper';
 
 //page
 @import 'page/index';
