--- a/src/sass/page/_archive-coverage.scss
+++ b/src/sass/page/_archive-coverage.scss
@@ -1,7 +1,7 @@
-.archive-coverage-wrapper {
+.archive-tem {
     background: $c-secondary-white;
 
-    .archive-coverage-container {
+    .archive-tem-c {
         @extend %page-content;
         @extend %tac;
         padding: 9rem 2rem 4rem;
