--- a/pro/assets/css/main.css
+++ b/pro/assets/css/main.css
@@ -69,11 +69,11 @@ table {
   border-spacing: 0;
 }
 
-<<<<<<< HEAD:pro/assets/css/main.css
-.archive-coverage-wrapper .ad-area-wrapper .ad-area-container, .archive-coverage-wrapper .archive-coverage-container, .article, card-job, nav {
-=======
-.archive-coverage-wrapper .archive-coverage-container, .article, .cardJob, card-job, nav {
->>>>>>> 8ef509f035acad094ebc9d171a85cf5a5f7cfe6b:pro/assets/css/main026e0ea58f19bf27bfe9.css
+.application-wrapper .first-view .container {
+  margin: auto;
+}
+
+.archive-tem .ad-area-wrapper .ad-area-container, .archive-tem .archive-tem-c, .article, .cardJob, card-job, nav {
   margin: auto;
   padding: 0 30px;
   max-width: 1920px;
@@ -84,19 +84,23 @@ table {
   display: block;
 }
 
-.job-tag > p, .archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .media-share .media-item a, .archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .category ul li a, nav .nav-brand img {
+.job-tag > p, .archive-tem .archive-tem-c .archive .archive-item .col.post-content .link .media-share .media-item a, .archive-tem .archive-tem-c .archive .archive-item .col.post-content .link .category ul li a, nav .nav-brand img {
   display: inline-block;
 }
 
-.classBtn input, .pgnb-style2 .g-pagination select, .archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .media-share .media-item a, .mobile-main-menu a, nav .main-menu li:hover > ul, nav .main-menu .dropdown-menu, nav .main-menu li:hover > a, nav .main-menu li:hover, nav .main-menu li a, nav .main-menu li, nav .main-menu a, nav .main-menu, nav .nav-brand img, nav .nav-brand, nav, header {
+.classBtn input, .pgnb-style2 .g-pagination select, .application-wrapper .first-view .container .btn, .application-wrapper .first-view, .archive-tem .archive-tem-c .archive .archive-item .col.post-content .link .media-share .media-item a, .mobile-main-menu a, nav .main-menu li:hover > ul, nav .main-menu .dropdown-menu, nav .main-menu li:hover > a, nav .main-menu li:hover, nav .main-menu li a, nav .main-menu li, nav .main-menu a, nav .main-menu, nav .nav-brand img, nav .nav-brand, nav, header {
   box-sizing: border-box;
 }
 
-.archive-coverage-wrapper .archive-coverage-container {
+.application-wrapper .first-view .container, .application-wrapper .first-view {
+  position: relative;
+}
+
+.application-wrapper .first-view .container, .archive-tem .archive-tem-c {
   text-align: center;
 }
 
-.pgnb-style2 .g-pagination select, .job-tag > p, .btn, .archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .category ul li {
+.pgnb-style2 .g-pagination select, .job-tag > p, .btn, .archive-tem .archive-tem-c .archive .archive-item .col.post-content .link .category ul li {
   cursor: pointer;
 }
 
@@ -645,15 +649,11 @@ card-job {
   color: white;
 }
 
-<<<<<<< HEAD:pro/assets/css/main.css
-.article {
-=======
 .swiper {
   margin: 33px 0px 0px 0px;
 }
 
 .cardJob {
->>>>>>> 8ef509f035acad094ebc9d171a85cf5a5f7cfe6b:pro/assets/css/main026e0ea58f19bf27bfe9.css
   display: flex;
   flex-wrap: unset;
   flex-direction: column;
@@ -663,42 +663,6 @@ card-job {
   margin: auto;
   gap: 48px;
   padding: 88px 120px;
-<<<<<<< HEAD:pro/assets/css/main.css
-  background: #F7F1E7;
-}
-.article .article-item {
-  display: flex;
-  flex-wrap: unset;
-  flex-direction: column;
-  justify-content: unset;
-  align-content: unset;
-  align-items: unset;
-  flex: 1;
-  gap: 20px;
-}
-.article .article-section {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: unset;
-  justify-content: unset;
-  align-content: unset;
-  align-items: unset;
-  flex: 1;
-  gap: 20px;
-  margin: unset;
-  padding: 0px;
-}
-.article .article-section > .article-section {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-column-gap: 40px;
-  grid-row-gap: 40px;
-}
-.article .article-section > .article-item {
-  display: flex;
-  flex-wrap: unset;
-  flex-direction: column;
-=======
 }
 
 .article {
@@ -727,15 +691,10 @@ card-job {
   display: flex;
   flex-wrap: wrap;
   flex-direction: unset;
->>>>>>> 8ef509f035acad094ebc9d171a85cf5a5f7cfe6b:pro/assets/css/main026e0ea58f19bf27bfe9.css
   justify-content: unset;
   align-content: unset;
   align-items: unset;
   flex: 1;
-<<<<<<< HEAD:pro/assets/css/main.css
-  gap: 12px;
-}
-=======
   gap: 40px;
   margin: unset;
   padding: 0px;
@@ -756,7 +715,6 @@ card-job {
   flex: 1;
   gap: 12px;
 }
->>>>>>> 8ef509f035acad094ebc9d171a85cf5a5f7cfe6b:pro/assets/css/main026e0ea58f19bf27bfe9.css
 .article .article-section > .article-item img {
   aspect-ratio: 16/9;
 }
@@ -797,25 +755,25 @@ card-job {
       writing-mode: vertical-lr;
 }
 
-.archive-coverage-wrapper {
+.archive-tem {
   background: #F7F1E7;
 }
-.archive-coverage-wrapper .archive-coverage-container {
+.archive-tem .archive-tem-c {
   padding: 9rem 2rem 4rem;
   margin: 0 auto;
   max-width: 1420px;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive {
+.archive-tem .archive-tem-c .archive {
   text-align: left;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive p,
-.archive-coverage-wrapper .archive-coverage-container .archive h4 {
+.archive-tem .archive-tem-c .archive p,
+.archive-tem .archive-tem-c .archive h4 {
   margin-bottom: 15px;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive p.total {
+.archive-tem .archive-tem-c .archive p.total {
   color: #000000;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive .archive-item {
+.archive-tem .archive-tem-c .archive .archive-item {
   display: flex;
   flex-wrap: unset;
   flex-direction: unset;
@@ -827,20 +785,20 @@ card-job {
   margin-bottom: 1rem;
   gap: 20px;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-cover {
+.archive-tem .archive-tem-c .archive .archive-item .col.post-cover {
   flex: 0.7;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-cover img {
+.archive-tem .archive-tem-c .archive .archive-item .col.post-cover img {
   width: 100%;
   aspect-ratio: 4/3;
   -o-object-fit: cover;
      object-fit: cover;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content {
+.archive-tem .archive-tem-c .archive .archive-item .col.post-content {
   flex: 1;
   padding: 2rem 1rem;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content p.date {
+.archive-tem .archive-tem-c .archive .archive-item .col.post-content p.date {
   display: flex;
   flex-wrap: unset;
   flex-direction: unset;
@@ -851,11 +809,11 @@ card-job {
        column-gap: 10px;
   color: #C15E0B;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content p.date svg {
+.archive-tem .archive-tem-c .archive .archive-item .col.post-content p.date svg {
   width: 100%;
   max-width: 30px;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link {
+.archive-tem .archive-tem-c .archive .archive-item .col.post-content .link {
   display: flex;
   flex-wrap: wrap;
   flex-direction: unset;
@@ -864,7 +822,7 @@ card-job {
   align-items: center;
   gap: 15px;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .category ul {
+.archive-tem .archive-tem-c .archive .archive-item .col.post-content .link .category ul {
   display: flex;
   flex-wrap: wrap;
   flex-direction: unset;
@@ -873,19 +831,19 @@ card-job {
   align-items: unset;
   gap: 10px;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .category ul li a {
+.archive-tem .archive-tem-c .archive .archive-item .col.post-content .link .category ul li a {
   color: #DD4B4B;
   padding: 0.5rem 1rem;
   transition: all ease 0.4s;
   border: 1px solid #d9d9d9;
   border-radius: 5px;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .category ul li a:hover {
+.archive-tem .archive-tem-c .archive .archive-item .col.post-content .link .category ul li a:hover {
   color: white;
   background: #DD4B4B;
   border-color: #DD4B4B;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .media-share {
+.archive-tem .archive-tem-c .archive .archive-item .col.post-content .link .media-share {
   display: flex;
   flex-wrap: wrap;
   flex-direction: unset;
@@ -894,7 +852,7 @@ card-job {
   align-items: center;
   gap: 10px;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .media-share .media-item a {
+.archive-tem .archive-tem-c .archive .archive-item .col.post-content .link .media-share .media-item a {
   width: 40px;
   height: 40px;
   padding: 0.5rem;
@@ -902,21 +860,21 @@ card-job {
   border-radius: 100px;
   transition: all ease 0.4s;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .media-share .media-item a:hover {
+.archive-tem .archive-tem-c .archive .archive-item .col.post-content .link .media-share .media-item a:hover {
   border-color: #DD4B4B;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .media-share .media-item a:hover svg path {
+.archive-tem .archive-tem-c .archive .archive-item .col.post-content .link .media-share .media-item a:hover svg path {
   fill: #DD4B4B;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .media-share .media-item a svg {
+.archive-tem .archive-tem-c .archive .archive-item .col.post-content .link .media-share .media-item a svg {
   width: 100%;
   height: 100%;
 }
-.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .col.post-content .link .media-share .media-item a svg path {
+.archive-tem .archive-tem-c .archive .archive-item .col.post-content .link .media-share .media-item a svg path {
   transition: all ease 0.4s;
 }
 @media screen and (max-width: 1024px) {
-  .archive-coverage-wrapper .archive-coverage-container .archive .archive-item {
+  .archive-tem .archive-tem-c .archive .archive-item {
     display: flex;
     flex-wrap: wrap;
     flex-direction: unset;
@@ -924,17 +882,17 @@ card-job {
     align-content: unset;
     align-items: unset;
   }
-  .archive-coverage-wrapper .archive-coverage-container .archive .archive-item .post-cover,
-.archive-coverage-wrapper .archive-coverage-container .archive .archive-item .post-content {
+  .archive-tem .archive-tem-c .archive .archive-item .post-cover,
+.archive-tem .archive-tem-c .archive .archive-item .post-content {
     flex: 1 !important;
     flex-basis: 100% !important;
   }
 }
 @media screen and (max-width: 480px) {
-  .archive-coverage-wrapper .archive-coverage-container {
+  .archive-tem .archive-tem-c {
     padding: 9rem 1.5rem 4rem;
   }
-  .archive-coverage-wrapper .archive-coverage-container .search-bar {
+  .archive-tem .archive-tem-c .search-bar {
     display: flex;
     flex-wrap: wrap;
     flex-direction: unset;
@@ -942,21 +900,21 @@ card-job {
     align-content: unset;
     align-items: unset;
   }
-  .archive-coverage-wrapper .archive-coverage-container .search-bar input {
+  .archive-tem .archive-tem-c .search-bar input {
     flex-basis: 100%;
   }
-  .archive-coverage-wrapper .archive-coverage-container .search-bar .btn {
+  .archive-tem .archive-tem-c .search-bar .btn {
     flex-basis: 30%;
   }
-  .archive-coverage-wrapper .archive-coverage-container .archive > div {
+  .archive-tem .archive-tem-c .archive > div {
     padding: 0 !important;
   }
 }
-.archive-coverage-wrapper .ad-area-wrapper {
+.archive-tem .ad-area-wrapper {
   background: white;
   padding: 5rem 0;
 }
-.archive-coverage-wrapper .ad-area-wrapper .ad-area-container {
+.archive-tem .ad-area-wrapper .ad-area-container {
   display: flex;
   flex-wrap: unset;
   flex-direction: unset;
@@ -967,19 +925,78 @@ card-job {
   margin: 0 auto;
   max-width: 1420px;
 }
-.archive-coverage-wrapper .ad-area-wrapper .ad-area-container .block {
+.archive-tem .ad-area-wrapper .ad-area-container .block {
   flex: 1;
   flex-basis: 100%;
 }
-.archive-coverage-wrapper .ad-area-wrapper .ad-area-container .block img {
+.archive-tem .ad-area-wrapper .ad-area-container .block img {
   width: 100%;
 }
 @media screen and (max-width: 480px) {
-  .archive-coverage-wrapper .ad-area-wrapper .ad-area-container {
+  .archive-tem .ad-area-wrapper .ad-area-container {
     flex-wrap: wrap;
   }
 }
 
+.application-wrapper .first-view {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: unset;
+  justify-content: unset;
+  align-content: unset;
+  align-items: unset;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 8rem 1rem;
+  height: 900px;
+  background-image: url(../../assets/img/application-bn.png);
+}
+.application-wrapper .first-view::after {
+  position: absolute;
+  top: 0;
+  right: unset;
+  bottom: unset;
+  left: 0;
+  z-index: 0;
+  content: "";
+  background: rgba(244, 234, 217, 0.45);
+  width: 100%;
+  height: 100%;
+}
+.application-wrapper .first-view .container {
+  position: absolute;
+  top: 50%;
+  right: unset;
+  bottom: unset;
+  left: 50%;
+  z-index: 0;
+  transform: translate(-50%, -20%);
+  width: 100%;
+  max-width: 1420px;
+  z-index: 1;
+}
+.application-wrapper .first-view .container h2, .application-wrapper .first-view .container h5 {
+  text-shadow: 1px 1px 10px #FFFFFF;
+  margin-bottom: 0;
+}
+.application-wrapper .first-view .container h2 span.h3, .application-wrapper .first-view .container h5 span.h3 {
+  color: #EF6261;
+  font-weight: 500;
+}
+.application-wrapper .first-view .container .btn {
+  width: 240px;
+  height: 60px;
+  padding: 0.5rem 1rem;
+  margin: 2rem 0;
+  border-radius: 8px;
+  filter: drop-shadow(0px 3.81395px 3.81395px rgba(0, 0, 0, 0.25));
+}
+@media screen and (max-width: 480px) {
+  .application-wrapper .first-view {
+    height: 600px;
+  }
+}
 * {
   font-family: "Noto Sans TC", sans-serif, Arial, "Font Awesome 6 Free" !important;
 }
@@ -1088,10 +1105,7 @@ p, .p1 {
   letter-spacing: 0.01em;
   color: white;
   background: #EF6261;
-<<<<<<< HEAD:pro/assets/css/main.css
   transition: all ease 0.4s;
-=======
->>>>>>> 8ef509f035acad094ebc9d171a85cf5a5f7cfe6b:pro/assets/css/main026e0ea58f19bf27bfe9.css
 }
 @media screen and (max-width: 768px) {
   .btn {
@@ -1145,7 +1159,6 @@ input:focus, select:focus {
   outline: none;
 }
 
-<<<<<<< HEAD:pro/assets/css/main.css
 .pgnb-style2 {
   margin: 2rem 0;
 }
@@ -1257,6 +1270,3 @@ input:focus, select:focus {
 }
 
 /*# sourceMappingURL=main.css.map*/
-=======
-/*# sourceMappingURL=main026e0ea58f19bf27bfe9.css.map*/
->>>>>>> 8ef509f035acad094ebc9d171a85cf5a5f7cfe6b:pro/assets/css/main026e0ea58f19bf27bfe9.css
