--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,6 +14,7 @@
 //page
 @import 'page/index';
 @import 'page/archive-coverage';
+@import 'page/application';
 
 //google-font
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap');
